[package]
name = "tk-listen"
description = """
    A set of helper futures allowing to listen TCP (or unix) socket with
    resource limits and proper error handling.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["listen", "tcp", "tokio", "bind"]
categories = ["Asynchronous", "Network programming"]
homepage = "http://github.com/tailhook/tk-listen"
documentation = "http://docs.rs/tk-listen"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
tokio-core = "0.1.10"
tokio-io = "0.1.3"
futures = "0.1.16"
log = "0.3.7"

[dev-dependencies]
tk-http = "0.3.1"
env_logger = "0.4.2"
abstract-ns = { git="https://github.com/tailhook/abstract-ns", rev="05a90ed" }
ns-router = { git="https://github.com/tailhook/ns-router", rev="4ae9f52" }
ns-std-threaded = { git="https://github.com/tailhook/abstract-ns", rev="05a90ed" }

